<resources>
    <string name="app_name">应用收藏</string>
    <string name="share_name">发送到Base64</string>

    <string name="bt1_text">加密</string>
    <string name="bt2_text">解密</string>
    <string name="tv1_text">原始数据</string>
    <string name="tv2_text">加密后数据</string>


    <string name="account">用户名/邮箱</string>
    <string name="passwd">密码</string>
    <string name="passwd_new">新密码</string>
    <string name="passwd_reset">重设密码</string>
    <string name="login">登录</string>
    <string name="register">注册</string>
    <string name="email">邮箱</string>
    <string name="email_reset">输入邮箱进行验证</string>
    <string name="name">用户名</string>
    <string name="name_reset">需要找回的用户名</string>
    <string name="signin">用户注册</string>
    <string name="forget">忘记密码</string>
    <string name="radio_btn1">所有应用</string>
    <string name="radio_btn2">我的收藏</string>
    <string name="radio_btn3">设置</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="empty_hint">收藏列表为空\n请在“所有应用”界面添加收藏</string>
</resources>