<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusableInTouchMode="true"
    android:gravity="center|top"

    >

    <ImageView
        android:id="@+id/avatar_img"
        android:layout_height="100dp"
        android:layout_width="100dp"
        android:layout_centerHorizontal="true"
        android:layout_marginVertical="20dp"
        android:layout_marginHorizontal="40dp"
        android:src="@drawable/default_avatar"/>




    <EditText
        android:id="@+id/name_et"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginVertical="10dp"
        android:layout_marginHorizontal="40dp"
        android:background="@drawable/edittext_selector"
        android:hint="@string/name"
        android:selectAllOnFocus="false"
        android:singleLine="false"
        android:visibility="visible"
        android:textAlignment="center"/>

    <EditText
        android:id="@+id/passwd_et"
        android:inputType="textPassword"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginVertical="10dp"
        android:layout_marginHorizontal="40dp"
        android:background="@drawable/edittext_selector"
        android:hint="@string/passwd"
        android:selectAllOnFocus="false"
        android:singleLine="false"
        android:visibility="visible"
        android:textAlignment="center"/>
    <EditText
        android:id="@+id/email_et"
        android:inputType="textEmailAddress"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginVertical="10dp"
        android:layout_marginHorizontal="40dp"
        android:background="@drawable/edittext_selector"
        android:hint="@string/email"
        android:selectAllOnFocus="false"
        android:singleLine="false"
        android:visibility="visible"
        android:textAlignment="center"/>
    <Button
        android:id="@+id/register_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="10dp"
        android:layout_marginHorizontal="40dp"
        android:layout_below="@+id/email_et"
        android:text="@string/register"
        android:background="@drawable/button_selector"/>




</LinearLayout>