<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusableInTouchMode="true"

    >

    <ImageView
        android:id="@+id/avatar_img"
        android:layout_height="150dp"
        android:layout_width="150dp"
        android:scaleType="fitXY"
        android:layout_centerHorizontal="true"
        android:layout_margin="40dp"
        android:src="@drawable/changepassword"/>




    <EditText
        android:id="@+id/name_et"
        android:layout_width="match_parent"
        android:layout_height="65dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_below="@+id/avatar_img"
        android:layout_weight="1"

        android:background="@drawable/edittext_selector"
        android:hint="@string/name_reset"
        android:selectAllOnFocus="false"
        android:singleLine="false"
        android:visibility="visible"
        android:textAlignment="center"/>
    <EditText
        android:id="@+id/email_et"
        android:inputType="textEmailAddress"
        android:layout_width="match_parent"
        android:layout_height="65dp"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginBottom="10dp"
        android:layout_below="@+id/name_et"
        android:layout_weight="1"
        android:background="@drawable/edittext_selector"
        android:hint="@string/email_reset"
        android:selectAllOnFocus="false"
        android:singleLine="false"
        android:visibility="visible"
        android:textAlignment="center"/>
    <EditText
        android:id="@+id/passwd_et"
        android:inputType="textPassword"
        android:layout_width="match_parent"
        android:layout_height="65dp"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginBottom="10dp"
        android:layout_below="@+id/email_et"
        android:layout_weight="1"
        android:background="@drawable/edittext_selector"
        android:hint="@string/passwd_new"
        android:selectAllOnFocus="false"
        android:singleLine="false"
        android:visibility="visible"
        android:textAlignment="center"/>

    <Button
        android:id="@+id/register_button"
        android:layout_width="80dp"
        android:layout_height="50dp"
        android:layout_below="@+id/passwd_et"
        android:layout_centerHorizontal="true"
        android:text="@string/passwd_reset"
        android:background="@drawable/button_selector"/>




</RelativeLayout>